--- a/views/admin/newBooks.ejs
+++ b/views/admin/newBooks.ejs
@@ -168,7 +168,7 @@
       tokenSeparators: [',', ' ']
     });
 
-    // INSERT
+    // INSERT & UPDATE
     $('#submit').click(function () {
       // Send a POST request
       var dataString = {
