--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -2,3 +2,6 @@
 .select2-container--default .select2-selection--single .select2-selection__rendered {
   line-height: 16px !important;
 }
+.hide {
+  display: none;
+}
