--- a/views/layouts/layout-admin.ejs
+++ b/views/layouts/layout-admin.ejs
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="/styles/icheck-bootstrap/icheck-bootstrap.css">
   <link rel="stylesheet" href="/styles/overlayScrollbars/OverlayScrollbars.css">
   <link rel="stylesheet" href="/styles/tempusdominus-bootstrap-4/tempusdominus-bootstrap-4.css">
+  <link rel="stylesheet" href="/styles/toastr/toastr.css">
   <link rel="stylesheet" href="/styles/custom.css">
   <!--STYLES END-->
   <script src="/js/jquery/dist/jquery.min.js"></script>
@@ -49,6 +50,7 @@
   <script src="/js/sweetalert2/dist/sweetalert2.js"></script>
   <script src="/js/overlayScrollbars/jquery.overlayScrollbars.js"></script>
   <script src="/js/tempusdominus-bootstrap-4/tempusdominus-bootstrap-4.js"></script>
+  <script src="/js/toastr/toastr.min.js"></script>
   <script src="/js/adminlte3/adminlte.js"></script>
   <script src="/js/script.js"></script>
   <!--SCRIPTS END-->
