--- a/views/pages/partials/header.ejs
+++ b/views/pages/partials/header.ejs
@@ -13,7 +13,7 @@
       </li>
       <% if (req.session.authenticated) { %>
       <li class="nav-item">
-        <a class="nav-link" href="/Profile">@<%= req.session.user.username%></a>
+        <a class="nav-link" style="color:#00ff14;" href="/Profile">@<%= req.session.user.username%></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/Dashboard">Dashboard</a>
