frontend mobile responsive bug fixed

--- a/views/layouts/layout-public.ejs
+++ b/views/layouts/layout-public.ejs
@@ -27,7 +27,7 @@
   <script src="/js/jquery/dist/jquery.min.js"></script>
 </head>
 
-<body>
+<body class="hold-transition layout-top-nav">
   <%- body %>
 
   <!--TEMPLATES-->
