--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -2,6 +2,14 @@
 .select2-container--default .select2-selection--single .select2-selection__rendered {
   line-height: 16px !important;
 }
+/* Hiding elements */
 .hide {
   display: none;
 }
+/* Adjust elements for mobile screen */
+@media only screen and (max-width: 600px) {
+  .search-bar-adjust {
+	 margin-top: 0.6em;
+  }
+}
+
